--- a/LbpApp/app/src/main/AndroidManifest.xml
+++ b/LbpApp/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ShowResultActivity" android:label="@string/showresult">
+
+        </activity>
     </application>
 
 </manifest>
